<resources>
    <string name="app_name">Mobile Banky</string>
    <string name="register">Registrieren</string>
    <string name="name_field">Name</string>
    <string name="email_field">Email</string>
    <string name="password_field">Passwort</string>
    <string name="registration_text">Bereits Registriert? Anmelden.</string>
    <string name="saldo_title">Aktuelles Saldo:</string>
    <string name="payments">Zahlungen</string>
    <string name="login">Login</string>
    <string name="login_text">Noch nicht registriert? Registrieren.</string>
    <string name="make_payment">Zahlung Tätigen</string>
    <string name="my_payments">Meine Zahlungen</string>
    <string name="amount_in_chf">Betrag in CHF</string>
    <string name="iban">IBAN</string>
    <string name="payment">Zahlung</string>


</resources>